--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 # This file lists all persons who contributed content to this repository.
 
 Foster Adu-Gyamfi <adugyamfifoster@gmail.com>
+
+Asare Felix Adu Gyamfi <flexywork327@gmail.com>
